src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_add_f32.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(5.0, 32), UDim::new(5.0, 32)).add(&10.0f32.into())"
---
UDim2:
  - - 15
    - 32
  - - 15
    - 32
