src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_floor_div_f32.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(5.23, 32),\nUDim::new(5.23, 32)).floor_div(&16.2f32.into())"
---
UDim2:
  - - 0
    - 2
  - - 0
    - 2
