src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_floor_div_udim2.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(5.23, 32),\nUDim::new(5.23,\n32)).floor_div(&UDim2::new(UDim::new(5.23, 32), UDim::new(5.23, 32)).into())"
---
UDim2:
  - - 1
    - 1
  - - 1
    - 1
