src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_modulus_f32.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(15.0, 32), UDim::new(15.0, 32)).modulus(&16.2f32.into())"
---
UDim2:
  - - 15
    - 0
  - - 15
    - 0
