src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_modulus_udim2.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(15.0, 32),\nUDim::new(15.0,\n32)).modulus(&UDim2::new(UDim::new(15.0, 32), UDim::new(15.0, 32)).into())"
---
UDim2:
  - - 0
    - 0
  - - 0
    - 0
