src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_mult_f32.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(10.0, 32), UDim::new(10.0, 32)).mult(&10.0f32.into())"
---
UDim2:
  - - 100
    - 320
  - - 100
    - 320
