src/math_ops/snapshots/rbx_types_ops__math_ops__udim2__udim2_mult_udim2.snap
---
source: src/math_ops/udim2.rs
expression: "UDim2::new(UDim::new(10.0, 32),\nUDim::new(10.0,\n32)).mult(&UDim2::new(UDim::new(10.0, 32), UDim::new(10.0, 32)).into())"
---
UDim2:
  - - 100
    - 1024
  - - 100
    - 1024
